applications/cloudflared/policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared-connection-policy
  namespace: cloudflared
spec:
  endpointSelector:
    matchLabels:
      app: cloudflared
  ingress:
    - {}
  egress:
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": argocd
            # app.kubernetes.io/instance: argocd-server
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": immich
            app.kubernetes.io/instance: immich
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: cloudflared
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
